--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,22 @@
 @import "susy";
+@import "breakpoint";
+@import "navigation";
 
 
 
 /* Variables */
 $bg-white: #FFFFFF;
 $bg-lightgrey: #efefef;
-
+$bg-black: #000;
 
 
 /* @Extends */
 .red{
     color:red;
 }
+
+
+$high-tide: 500px;
 
 
 $susy: (
@@ -21,6 +26,19 @@ $susy: (
     global-box-sizing: border-box,
 
 );
+
+
+
+
+// assume min-width (by default) if only a number
+$high-tide: 500px;
+// set min-width/max-width if both values are numbers
+$ex-presidents: 600px 800px;
+// if one value is a string, assume a feature/value pair
+$surfboard-width: max-width 1000px;
+// string tests together within parentheses, assume each item is a feature value pair
+$surfboard-height: (min-height 1000px) (orientation portrait);
+
 
 
 
@@ -46,7 +64,10 @@ header, article, aside {
 header {
     padding: 2em;
     background-color: $bg-lightgrey;
-    @extend .red;
+
+     @include breakpoint($ex-presidents){
+         background-color: $bg-black;
+     }
 }
 
 article {
