--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,30 @@
 /* Variables */
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  margin: 22px;
+  text-decoration: none; }
+
+li {
+  display: inline;
+  color: #000; }
+
+li a {
+  text-decoration: none; }
+
+.navwrap {
+  --webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  padding: 2px;
+  margin-bottom: 10px; }
+
+/* Variables */
 /* @Extends */
-.red, header {
+.red {
   color: red; }
 
 *, *:before, *:after {
@@ -21,24 +45,27 @@
 .test {
   width: 49%;
   float: left;
-  margin-right: 1.6949152542%; }
+  margin-right: 1.69492%; }
 
 header, article, aside {
-  margin-bottom: 1.6949152542%; }
+  margin-bottom: 1.69492%; }
 
 header {
   padding: 2em;
   background-color: #efefef; }
+  @media (min-width: 600px) and (max-width: 800px) {
+    header {
+      background-color: #000; } }
 
 article {
-  width: 83.0508474576%;
+  width: 83.05085%;
   float: left;
-  margin-right: 1.6949152542%;
+  margin-right: 1.69492%;
   padding: 2em;
   background-color: #efefef; }
 
 aside {
-  width: 15.2542372881%;
+  width: 15.25424%;
   float: right;
   margin-right: 0;
   padding: 2em;
